--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,11 @@
       <artifactId>quarkus-resteasy-reactive</artifactId>
     </dependency>
     <dependency>
+      <groupId>io.quarkiverse.githubapp</groupId>
+      <artifactId>quarkus-github-app</artifactId>
+      <version>1.11.0</version>
+    </dependency>
+    <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-junit5</artifactId>
       <scope>test</scope>
