--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
     <skipITs>true</skipITs>
     <surefire-plugin.version>3.0.0-M7</surefire-plugin.version>
     <version.buildnumber.plugin>3.0.0</version.buildnumber.plugin>
+    <version.formatter.plugin>2.20.0</version.formatter.plugin>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -148,6 +149,31 @@
                 <maven.home>${maven.home}</maven.home>
               </systemPropertyVariables>
             </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>net.revelc.code.formatter</groupId>
+        <artifactId>formatter-maven-plugin</artifactId>
+        <version>${version.formatter.plugin}</version>
+        <dependencies>
+          <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-ide-config</artifactId>
+            <version>${quarkus.version}</version>
+          </dependency>
+        </dependencies>
+        <configuration>
+          <configFile>eclipse-format.xml</configFile>
+          <lineEnding>LF</lineEnding>
+          <skip>${format.skip}</skip>
+        </configuration>
+        <executions>
+          <execution>
+            <phase>process-sources</phase>
+            <goals>
+              <goal>format</goal>
+            </goals>
           </execution>
         </executions>
       </plugin>
