--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 quarkus.application.name=quarkus-github-lottery
 quarkus.application.version=${buildNumber:999-SNAPSHOT}
+
+%test.quarkus.scheduler.enabled=false
