--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,5 +49,14 @@ jobs:
         # refresh cache every month to avoid unlimited growth
         key: maven-repo-pr-${{ runner.os }}-${{ steps.get-date.outputs.date }}
 
+    - name: Validate formatting
+      run: mvn -B clean formatter:validate
+
+    - name: Check out quarkus-github-app main
+      run: git clone https://github.com/quarkiverse/quarkus-github-app.git
+
+    - name: Build quarkus-github-app 999-SNAPSHOT
+      run: cd quarkus-github-app && mvn -B clean install -DskipTests && cd -
+
     - name: Build with Maven
-      run: mvn -B clean formatter:validate install
+      run: mvn -B install
