--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,11 @@
       <version>${quarkus-github-app.version}</version>
     </dependency>
     <dependency>
+      <groupId>io.quarkiverse.githubapp</groupId>
+      <artifactId>quarkus-github-app-testing</artifactId>
+      <version>${quarkus-github-app.version}</version>
+    </dependency>
+    <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-junit5</artifactId>
       <scope>test</scope>
