Upgrade to Quarkus GitHub App 1.13.0

--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
     <quarkus.platform.group-id>io.quarkus</quarkus.platform.group-id>
     <quarkus.version>2.12.1.Final</quarkus.version>
     <assertj.version>3.23.1</assertj.version>
-    <quarkus-github-app.version>999-SNAPSHOT</quarkus-github-app.version>
+    <quarkus-github-app.version>1.13.0</quarkus-github-app.version>
     <skipITs>true</skipITs>
     <surefire-plugin.version>3.0.0-M7</surefire-plugin.version>
     <version.buildnumber.plugin>3.0.0</version.buildnumber.plugin>
