--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@ quarkus.application.name=quarkus-github-lottery
 quarkus.application.version=${buildNumber:999-SNAPSHOT}
 
 %test.quarkus.scheduler.enabled=false
+%test.quarkus.log.category."io.quarkus.github.lottery".level=DEBUG
+
+%dev.quarkus.scheduler.enabled=false
+%dev.quarkus.log.category."io.quarkus.github.lottery".level=DEBUG
