--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,16 @@
       <version>${quarkus-github-app.version}</version>
     </dependency>
     <dependency>
+      <!-- To deserialize Optional -->
+      <groupId>com.fasterxml.jackson.datatype</groupId>
+      <artifactId>jackson-datatype-jdk8</artifactId>
+    </dependency>
+    <dependency>
+      <!-- To deserialize ZoneId -->
+      <groupId>com.fasterxml.jackson.datatype</groupId>
+      <artifactId>jackson-datatype-jsr310</artifactId>
+    </dependency>
+    <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-junit5</artifactId>
       <scope>test</scope>
