--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,11 @@
     </dependency>
     <dependency>
       <groupId>io.quarkiverse.githubapp</groupId>
+      <artifactId>quarkus-github-app-command-airline</artifactId>
+      <version>${quarkus-github-app.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>io.quarkiverse.githubapp</groupId>
       <artifactId>quarkus-github-app-testing</artifactId>
       <version>${quarkus-github-app.version}</version>
       <scope>test</scope>
