Upgrade to the latest snapshot of github-api

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,8 +49,8 @@ jobs:
         # refresh cache every month to avoid unlimited growth
         key: maven-repo-pr-${{ runner.os }}-${{ steps.get-date.outputs.date }}
 
-    - name: Check out yrodiere:github-api i1082-listRepositories
-      run: git clone -b i1082-listRepositories https://github.com/yrodiere/github-api.git
+    - name: Check out yrodiere:github-api waitingforrelease
+      run: git clone -b waitingforrelease https://github.com/yrodiere/github-api.git
 
     - name: Build github-api SNAPSHOT
       run: cd github-api && mvn -B clean install -DskipTests && cd -
