--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 quarkus.application.name=quarkus-github-lottery
 quarkus.application.version=${buildNumber:999-SNAPSHOT}
 
+quarkus.qute.suffixes=md
+quarkus.qute.content-types."md"=text/markdown
+
 %test.quarkus.scheduler.enabled=false
 %test.quarkus.log.category."io.quarkus.github.lottery".level=DEBUG
 
