--- a/src/main/docker/Dockerfile.native
+++ b/src/main/docker/Dockerfile.native
@@ -25,3 +25,6 @@ EXPOSE 8080
 USER 1001
 
 CMD ["./application", "-Dquarkus.http.host=0.0.0.0"]
+
+HEALTHCHECK \
+  CMD curl -f http://localhost:8080/q/health || exit 1
