--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,10 @@
       <version>${quarkus-github-app.version}</version>
     </dependency>
     <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-openshift</artifactId>
+    </dependency>
+    <dependency>
       <groupId>io.quarkiverse.githubapp</groupId>
       <artifactId>quarkus-github-app-testing</artifactId>
       <version>${quarkus-github-app.version}</version>
