--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,9 @@ quarkus.qute.content-types."md"=text/markdown
 
 %dev.quarkus.scheduler.enabled=false
 %dev.quarkus.log.category."io.quarkus.github.lottery".level=DEBUG
+
+%prod.quarkus.openshift.labels."app"=quarkus-github-lottery
+# renew the SSL certificate automatically
+%prod.quarkus.openshift.annotations."kubernetes.io/tls-acme"=true
+%prod.quarkus.openshift.env.configmaps=quarkus-github-lottery-config
+%prod.quarkus.openshift.env.secrets=quarkus-github-lottery-secrets
