Prevent concurrent deployments

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,10 @@ on:
       - '*.txt'
       - '.all-contributorsrc'
 
+concurrency:
+  group: deployment
+  cancel-in-progress: false
+
 jobs:
   deploy:
 
