Expose a route in Openshift deployment

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,7 @@ quarkus.qute.content-types."md"=text/markdown
 %dev.quarkus.log.category."io.quarkus.github.lottery".level=DEBUG
 
 %prod.quarkus.openshift.labels."app"=quarkus-github-lottery
+%prod.quarkus.openshift.route.expose=true
 # renew the SSL certificate automatically
 %prod.quarkus.openshift.annotations."kubernetes.io/tls-acme"=true
 %prod.quarkus.openshift.env.configmaps=quarkus-github-lottery-config
