--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,9 @@ quarkus.qute.content-types."md"=text/markdown
 %dev.quarkus.log.category."io.quarkus.github.lottery".level=DEBUG
 
 %prod.quarkus.openshift.labels."app"=quarkus-github-lottery
-# renew the SSL certificate automatically
+# Renew the SSL certificate automatically
+# This requires an additional controller to run on the OpenShift cluster (in our case it does).
+# See https://github.com/tnozicka/openshift-acme/#enabling-acme-certificates-for-your-object
 %prod.quarkus.openshift.annotations."kubernetes.io/tls-acme"=true
 %prod.quarkus.openshift.env.configmaps=quarkus-github-lottery-config
 %prod.quarkus.openshift.env.secrets=quarkus-github-lottery-secrets
