Refactor to allow for more buckets than just "triage"

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,12 @@ quarkus.qute.suffixes=md
 quarkus.qute.content-types."md"=text/markdown
 
 %test.quarkus.scheduler.enabled=false
-%test.quarkus.log.category."io.quarkus.github.lottery".level=DEBUG
+%test.quarkus.log.min-level=TRACE
+%test.quarkus.log.category."io.quarkus.github.lottery".level=TRACE
 
 %dev.quarkus.scheduler.enabled=false
-%dev.quarkus.log.category."io.quarkus.github.lottery".level=DEBUG
+%dev.quarkus.log.min-level=TRACE
+%dev.quarkus.log.category."io.quarkus.github.lottery".level=TRACE
 
 %prod.quarkus.openshift.labels."app"=quarkus-github-lottery
 # Renew the SSL certificate automatically
