--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
 
     - uses: actions/checkout@v2
       with:
-        directory: kubernetes-client
+        path: kubernetes-client
         repository: vietj/kubernetes-client
         ref: fix-stack-overflow
 
