--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 quarkus.application.name=quarkus-github-lottery
-quarkus.application.version=${buildNumber:999-SNAPSHOT}
 
 quarkus.qute.suffixes=md
 quarkus.qute.content-types."md"=text/markdown
+
+quarkus.management.enabled=true
+quarkus.info.enabled=true
 
 %test.quarkus.scheduler.enabled=false
 %test.quarkus.log.min-level=TRACE
