dependabot: quarkus group, throttle assertj bumps

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,3 +11,13 @@ updates:
           - "org.apache.maven*:*"
         exclude-patterns:
           - "io.quarkus*"
+      quarkus:
+        patterns:
+          - "io.quarkus:*"
+          - "io.quarkus.*:*"
+          - "io.quarkiverse:*"
+          - "io.quarkiverse.*:*"
+    ignore:
+      # Releases too often, it's annoying
+      - dependency-name: "org.assertj:*"
+        update-types: ["version-update:semver-patch"]
