Fix deployment failures on new versions

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,5 @@ quarkus.info.enabled=true
 %prod.quarkus.openshift.annotations."kubernetes.io/tls-acme"=true
 %prod.quarkus.openshift.env.configmaps=quarkus-github-lottery-config
 %prod.quarkus.openshift.env.secrets=quarkus-github-lottery-secrets
+# https://github.com/quarkusio/quarkus/issues/39180
+%prod.quarkus.openshift.add-version-to-label-selectors=false
