Use the "search issues" API instead of the "query issues" API
Because it's (much) more flexible.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,7 @@ quarkus.info.enabled=true
 %dev.quarkus.scheduler.enabled=false
 %dev.quarkus.log.min-level=TRACE
 %dev.quarkus.log.category."io.quarkus.github.lottery".level=TRACE
+%dev.quarkus.log.category."org.kohsuke.github.GitHubClient".level=TRACE
 
 %prod.quarkus.openshift.labels."app"=quarkus-github-lottery
 # Renew the SSL certificate automatically
