Add a build step to explicitly install OC

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,6 +33,11 @@ jobs:
         distribution: temurin
         java-version: 17
 
+    - name: Install CLI tools from OpenShift Mirror
+      uses: redhat-actions/openshift-tools-installer@v1
+      with:
+        oc: "latest"
+
     - name: Log in to OpenShift
       uses: redhat-actions/oc-login@v1
       with:
