Log GitHub request/response bodies in dev mode

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,9 +11,9 @@ quarkus.info.enabled=true
 %test.quarkus.log.category."io.quarkus.github.lottery".level=TRACE
 
 %dev.quarkus.scheduler.enabled=false
-%dev.quarkus.log.min-level=TRACE
-%dev.quarkus.log.category."io.quarkus.github.lottery".level=TRACE
-%dev.quarkus.log.category."org.kohsuke.github.GitHubClient".level=TRACE
+%dev.quarkus.log.min-level=FINEST
+%dev.quarkus.log.category."io.quarkus.github.lottery".level=FINEST
+%dev.quarkus.log.category."org.kohsuke.github.GitHubClient".level=FINEST
 
 %prod.quarkus.openshift.labels."app"=quarkus-github-lottery
 # Renew the SSL certificate automatically
