Enable batch mode in Maven on deploy
Otherwise logs get so long with download progress that we can't even see
the end in GitHub Actions.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,4 +49,4 @@ jobs:
       run: oc delete is ubi-quarkus-native-binary-s2i || true
 
     - name: Build and deploy
-      run: mvn clean package -Dquarkus.kubernetes.deploy=true -Dquarkus.native.container-build=true -Dnative -Drevision=${{ github.sha }}
+      run: mvn -B clean package -Dquarkus.kubernetes.deploy=true -Dquarkus.native.container-build=true -Dnative -Drevision=${{ github.sha }}
