Work around ToStringStyle native compilation error

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,6 @@ quarkus.info.enabled=true
 %prod.quarkus.openshift.env.secrets=quarkus-github-lottery-secrets
 # https://github.com/quarkusio/quarkus/issues/39180
 %prod.quarkus.openshift.add-version-to-label-selectors=false
+
+# Workaround for https://quarkusio.zulipchat.com/#narrow/channel/187038-dev/topic/Native.20compilation.20failure.20with.203.2E31.2C.20.60ToStringStyle.60/with/571698433
+quarkus.native.additional-build-args=--initialize-at-build-time=org.apache.commons.lang3.builder.ToStringStyle
