--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,4 +53,4 @@ jobs:
       run: mvn -B clean formatter:validate
 
     - name: Build with Maven
-      run: mvn -B install
+      run: mvn -B -Dnative install
